--- a/admin/package.json
+++ b/admin/package.json
@@ -16,7 +16,8 @@
     "axios": "^0.19.0",
     "element-ui": "^2.12.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "wangeditor": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
