--- a/admin/serive/package.json
+++ b/admin/serive/package.json
@@ -13,6 +13,9 @@
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
-    "mongoose": "^5.6.13"
+    "formidable": "^1.2.1",
+    "mongoose": "^5.6.13",
+    "multer": "^1.4.2",
+    "silly-datetime": "^0.1.2"
   }
 }
