--- a/admin/package.json
+++ b/admin/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "axios": "^0.19.0",
     "element-ui": "^2.12.0",
+    "jquery": "^3.4.1",
     "vue": "^2.5.2",
+    "vue-froala-wysiwyg": "^2.9.0",
     "vue-router": "^3.0.1",
     "wangeditor": "^3.1.1"
   },
